# starfish

./: .gitmodules  CMakeLists.txt  README.md  todo.md
src/: board.cpp  board.hpp  colour.hpp  main.cpp  move.cpp  move.hpp  piece.cpp  piece.hpp  square.cpp  square.hpp  utils.cpp  utils.hpp
